2022-02-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with fetchdialog layout preventing clicking (Bug 449636).

2022-01-02  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.3.

2021-12-31  Robby Stephenson  <robby@periapsis.org>

	* Updated kinopoisk.ru data source (Bug 447435).

2021-12-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with opening target=_blank links (Bug 445871).

2021-12-11  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug in audio file importer (Bug 446551).

2021-11-08  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 3.4.2.

2021-11-07  Robby Stephenson  <robby@periapsis.org>

	* Updated IBS.it data source.

2021-11-06  Robby Stephenson  <robby@periapsis.org>

	* Updated kino.de data source.

2021-11-05  Robby Stephenson  <robby@periapsis.org>

	* Added menu actions to copy and save images (Bug 443897).

2021-10-20  Robby Stephenson  <robby@periapsis.org>

	* Fixed XML error when loading invalid characters (Bug 443845).

2021-10-17  Robby Stephenson  <robby@periapsis.org>

	* Improved Discogs search to fetch more results when available.

2021-10-04  Robby Stephenson  <robby@periapsis.org>

	* Updated TheTVDB data source to API v4.

2021-09-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that caused crashes when importing PDF files.

2021-08-22  Robby Stephenson  <robby@periapsis.org>

	* Added DBUS command to import PDF files.

2021-08-18  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with being able to undo appending a collection.

2021-08-05  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug that failed to add string macros for importing bibtex (Bug 440652).

2021-06-17  Robby Stephenson  <robby@periapsis.org>

	* Added RPGGeek.com data source.

2021-06-13  Robby Stephenson  <robby@periapsis.org>

	* Updated audio file metadata import for a few more fields.

2021-06-12  Robby Stephenson  <robby@periapsis.org>
